# ToolSandbox

./: .gitignore  .pre-commit-config.yaml  ACKNOWLEDGEMENTS  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  TOOLSANDBOX_GUIDE.md  pyproject.toml  tabulate_results.py
docs/: LiteLLM_Agent_Implementation_Plan.md  NOTES.md  TASK_GENERATOR_IMPLEMENTATION_PLAN.md
notebooks/: goal_inference.ipynb  playground_agg_results_comparison.ipynb  playground_single_run_analysis.ipynb  task_generator.ipynb
tests/: __init__.py
tests/analysis/: trajectory_parser_test.py
tests/cli/: cli_test.py
tests/common/: evaluation_test.py  execution_context_test.py  litellm_message_conversion_test.py  message_conversion_test.py  tool_conversion_test.py  tool_discovery_test.py  utils_test.py  validators_test.py
tests/models/: litellm_agent_test.py  litellm_test.py
tests/roles/: cohere_agent_test.py  execution_environment_test.py
tests/tools/: contact_test.py  messaging_test.py  rapid_api_search_tools_test.py  reminder_test.py  setting_test.py  utilities_test.py
tool_sandbox/analysis/: analysis.py  data_loading.py  trajectory_parser.py  trajectory_types.py
tool_sandbox/cli/: __init__.py  goal_inference.py  utils.py
tool_sandbox/common/: evaluation.py  exceptions.py  execution_context.py  message_conversion.py  registry.py  scenario.py  tool_conversion.py  tool_discovery.py  tool_trace_extractors.py  utils.py  validators.py
tool_sandbox/configs/: __init__.py  models.py
tool_sandbox/models/: anthropic_api_agent.py  anthropic_tool_utils.py  cli_role.py  cohere_agent.py  execution_environment.py  gemini_agent.py  goal_inference_agent.py  goal_inference_prompts.yaml  gorilla_api_agent.py  hermes_api_agent.py  hermes_prompts.yaml  litellm.py  litellm_agent.py  mistral_api_agent.py  mistral_tool_utils.py  openai_api_agent.py  openai_api_user.py  parsers.py  unhelpful_agent.py  utils.py
tool_sandbox/notebooks/: playground_single_run_analysis.ipynb  trajectory_comparison.ipynb
tool_sandbox/roles/: anthropic_api_agent.py  anthropic_tool_utils.py  athene_api_agent.py  base_role.py  cli_role.py  cohere_agent.py  cohere_api_agent.py  execution_environment.py  gemini_agent.py  gorilla_api_agent.py  hermes_api_agent.py  mistral_api_agent.py  mistral_tool_utils.py  openai_api_agent.py  openai_api_user.py  unhelpful_agent.py
tool_sandbox/scenarios/: __init__.py  base_scenarios.py  format_correct_prompt.yaml  goal_inference_scenarios.py  insufficient_information_scenarios.py  multiple_tool_call_scenarios.py  multiple_user_turn_scenarios.py  openai_task_generator.py  scenario_generator.py  single_tool_call_scenarios.py  task_generation_prompts.yaml  user_simulator_few_shot_examples.py
tool_sandbox/tools/: __init__.py  chat.py  contact.py  messaging.py  rapid_api_search_tools.py  reminder.py  setting.py  user_tools.py  utilities.py
